src/index.css
@import url('https://fonts.googleapis.com/css2?family=Lumanosimo&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Slackey&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Are+You+Serious&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto Slab', serif;
}

body {
  background-color: #f9e1e6;
}

html,
body,
#root {
  min-height: 100%;
  height: 100%;
}

@media screen and (max-width:576px) {
  html,
  body,
  #root {
    display: none;
  }
}

